WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308680
Web Inspector: Previewing resources in Web Inspector displays "An error occurred trying to load the resource" when Preserve Log is enabled
https://bugs.webkit.org/show_bug.cgi?id=308680
Summary
Web Inspector: Previewing resources in Web Inspector displays "An error occur...
Roy Reapor
Reported
2026-02-25 16:36:15 PST
Previewing resources in Web Inspector displays "An error occurred trying to load the resource" when Preserve Log is enabled. Setup: 1. Open Safari. 2. Show Web Inspector in the Network tab enable "Preserve Log" by clicking on the filter icon and clicking Preserve Log 3. Quit Safari Steps to reproduce: 1. Open Safari 2. Navigate to webkit.org 3. Open Web Inspector. Select Network tab. Filter by Document. 4. Do not click on the webkit.org document 5. Navigate to webkit.org/blog 6. In Web Inspector click on the Document `webkit.org` . 7. The Preview should not say `An error occurred trying to load the resource`
Attachments
Add attachment
proposed patch, testcase, etc.
Roy Reapor
Comment 1
2026-02-25 16:40:19 PST
Patch incoming. The Web Inspector UI does not synchronize "Perserve Log" to the Web Inspector backend. The resources are actually deleted in the back end when the user navigates away. You can workaround this issue by clicking on resources on the UI before navigating away. This is hard to do when you have HTML or HTTP redirects.
Radar WebKit Bug Importer
Comment 2
2026-02-25 16:42:45 PST
<
rdar://problem/171216835
>
Roy Reapor
Comment 3
2026-02-25 16:54:42 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59463
EWS
Comment 4
2026-03-03 09:52:53 PST
Committed
308559@main
(4ec1778cf0a7): <
https://commits.webkit.org/308559@main
> Reviewed commits have been landed. Closing PR #59463 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug