Web Inspector: Previewing resources in Web Inspector displays "An error occurred trying to load the resource" when Preserve Log is enabled rdar://171216835 https://bugs.webkit.org/show_bug.cgi?id=308680

Reviewed by Devin Rousso and BJ Burg.

Changed `Preseve Log` in Web Inspector's Network tab to say `Preserve Requests`. Plumbed state through InspectorNetworkAgent.

Test: inspector/network/clear-resource-data-on-navigate.html

* LayoutTests/inspector/network/clear-resource-data-on-navigate-expected.txt: Added.
* LayoutTests/inspector/network/clear-resource-data-on-navigate.html: Added.
* Source/JavaScriptCore/inspector/protocol/Network.json:
* Source/WebCore/inspector/agents/InspectorNetworkAgent.cpp:
(WebCore::InspectorNetworkAgent::setClearResourceDataOnNavigate):
(WebCore::InspectorNetworkAgent::mainFrameNavigated):
* Source/WebCore/inspector/agents/InspectorNetworkAgent.h:
* Source/WebInspectorUI/Localizations/en.lproj/localizedStrings.js:
* Source/WebInspectorUI/UserInterface/Base/Main.js:
* Source/WebInspectorUI/UserInterface/Controllers/NetworkManager.js:
(WI.NetworkManager.prototype.initializeTarget):
* Source/WebInspectorUI/UserInterface/Views/NetworkTableContentView.js:
(WI.NetworkTableContentView.prototype._handleOtherFiltersNavigationItemContextMenu):

Canonical link: https://commits.webkit.org/308559@main